@@ -31,12 +31,14 @@
         <maven.compiler.release>26</maven.compiler.release>
 
         <jdk.preview.enable>--enable-preview</jdk.preview.enable>
+        <exec.maven.plugin.version>3.5.0</exec.maven.plugin.version>
         <test.jvm.args>
             -XX:+UnlockExperimentalVMOptions
             -XX:+UseZGC
             -XX:-ZUncommit
             --enable-preview
             --enable-native-access=ALL-UNNAMED
+            --add-opens java.base/sun.nio.ch=ALL-UNNAMED
             -XX:FlightRecorderOptions=stackdepth=256
             -XX:StartFlightRecording=disk=true,filename=target/recording-${maven.build.timestamp}.jfr,maxsize=256m,maxage=10m,settings=profile
         </test.jvm.args>
